--- a/starter-code/style.css
+++ b/starter-code/style.css
@@ -1,7 +1,3 @@
-* {
-  box-sizing: border-box;
-}
-
 html {
   background: #FFE5DC;
   color: #fff;
@@ -29,28 +25,24 @@ header {
 }
 
 .yearbook {
+  display: flex;
+  display: -webkit-box; /* OLD - iOS 6-, Safari 3.1-6, BB7 */
+  display: -ms-flexbox; /* TWEENER - IE 10 */
+  display: -webkit-flex; /* NEW - Safari 6.1+. iOS 7.1+, BB10 */
   width: 100%;
-}
-
-.card-column {
-  width: 100%;
-}
-
-.card {
-  width: 25%;
-  float: left;
+  justify-content: center;
+  flex-wrap: wrap;
 }
 
 figure {
-  float: left;
   padding: 10px 10px 20px 10px;
   background-color: white;
   border-radius: 10px;
   box-shadow: 5px 5px rgba(168, 168, 168, 0.5);
 }
 
-img {
-  width: 100%;
+.card img {
+  width: 200px;
   border-radius: 10px;
 }
 
@@ -59,4 +51,10 @@ figcaption {
   color: #696969;
   text-align: center;
   font-size: 60%;
+}
+
+@media (max-width: 500px) {
+  .card img {
+    width: 100%;
+  }
 }
